clusters/homelab/network/gateway/gateway-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cf-tunnel
  namespace: kube-system
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.10.10.201
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.tylerrosnett.com'
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              expose-public: "true"
