clusters/homelab/network/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      lb-announce: "true"
  addresses:
    - type: IPAddress
      value: 10.10.10.200
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.internal.tylerrosnett.com'
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.internal.tylerrosnett.com'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-cluster-tls
