clusters/homelab/network/gateway/pfsense-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pfsense-redirect
  namespace: kube-system
spec:
  parentRefs:
    - name: cilium-gateway
      sectionName: https
  hostnames:
    - pfsense.internal.tylerrosnett.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: 192.168.1.1
            statusCode: 302
            port: 443
